--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -52,13 +52,13 @@
 
 <div id="user-modal-edit" class="modal fade">
     <div class="modal-dialog">
-            <div th:replace="fragments/edit_form"/>
+<!--            <div th:replace="fragments/edit_form"></div>-->
     </div>
 </div>
 
 <div id="user-modal-delete" class="modal fade">
     <div class="modal-dialog">
-            <div th:replace="fragments/delete_form"/>
+<!--            <div th:replace="fragments/delete_form"></div>-->
     </div>
 </div>
 
