--- a/src/main/resources/templates/fragments/newuser_panel.html
+++ b/src/main/resources/templates/fragments/newuser_panel.html
@@ -6,9 +6,9 @@
     <form class="form-control" action="#" th:action="@{/admin/savenew}" th:object="${user}"
           method="post">
         <div class="mb-3">
-            <label for="firstname" class="form-label"><strong>First name</strong></label>
+            <label for="name" class="form-label"><strong>Name</strong></label>
             <br>
-            <input type="text" class="form-control field_yellow" required id="firstname" placeholder="Enter first name"
+            <input type="text" class="form-control field_yellow" required id="name" placeholder="Enter name"
                    th:classappend="${bindingResult} and ${bindingResult.hasFieldErrors('name')} ? 'is-invalid'" th:field="*{name}"/>
             <th:block th:if="${bindingResult} and ${bindingResult.hasFieldErrors('name')}">
                 <div class="invalid-feedback" th:each="error : ${bindingResult.getFieldErrors('name')}" th:text="${error.getDefaultMessage()}"/>
