--- a/src/main/resources/templates/fragments/edit_form.html
+++ b/src/main/resources/templates/fragments/edit_form.html
@@ -14,7 +14,7 @@
                     <div>
                         <label for="firstName" class="form-label"><strong>First name</strong></label>
                         <input class="form-control" th:classappend="${bindingResult} and ${bindingResult.hasFieldErrors('userName')}  ? 'is-invalid'"
-                               id="firstName" type="text" placeholder="Enter first name" required th:field="*{name}"/>
+                               id="firstName" type="text" placeholder="Enter name" required th:field="*{name}"/>
 
                         <th:block th:if="${bindingResult} and ${bindingResult.hasFieldErrors('name')}">
                             <div class="invalid-feedback" th:each="error : ${bindingResult.getFieldErrors('name')}" th:text="${error.getDefaultMessage()}"/>
@@ -54,7 +54,7 @@
                         <select multiple id="roles"  th:field="*{roleList}" size="2">
                             <option
                                     th:each="role : ${allRoles}"
-                                    th:text="${role.name}"
+                                    th:text="${role.roleName}"
                                     th:value="${role.id}"
                             >
                             </option>
@@ -65,7 +65,7 @@
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="submit" class="btn btn-primary submit">Save</button>
+            <button type="submit" class="btn btn-primary submit">Edit</button>
         </div>
     </form>
 </div>
