--- a/src/main/resources/templates/fragments/table_panel.html
+++ b/src/main/resources/templates/fragments/table_panel.html
@@ -7,11 +7,9 @@
     <thead>
   <tr class="border-top">
       <th>ID</th>
-      <th>FirstName</th>
-      <th>LastName</th>
+      <th>Name</th>
       <th>Age</th>
       <th>Email</th>
-      <th>Password</th>
       <th>Role</th>
       <th>Edit</th>
       <th>Delete</th>
@@ -23,7 +21,6 @@
       <td th:utext="${lst.getName()}">Name</td>
       <td th:utext="${lst.getAge()}">Age</td>
       <td th:utext="${lst.getEmail()}">Mail</td>
-      <td th:utext="${lst.getPassword()}">Password</td>
       <td th:utext="${lst.getShotRoles()}">Role</td>
       <td>
               <a th:href="@{'admin/edit/' + ${lst.getId()}}"
